Closed Bug 1399137 Opened 7 years ago Closed 7 years ago

H264 with payload type 97 broken in mochitests

Categories

(Core :: WebRTC: Audio/Video, defect, P3)

57 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- wontfix
firefox57 --- wontfix
firefox58 --- fixed

People

(Reporter: pehrsons, Assigned: pehrsons)

References

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

Attached patch TestcaseSplinter Review
While writing a mochitest for video codecs in peer connection (bug 1395853) I hit a debug assert on using payload type 97 in a sender's offer sdp:

> GECKO(8702) | # Fatal error in /home/pehrsons/Dev/mozilla-central/media/webrtc/trunk/webrtc/modules/rtp_rtcp/source/rtp_format_h264.cc, line 250
> GECKO(8702) | # last system error: 0
> GECKO(8702) | # Check failed: payload_size_left >= fragment->length (1176 vs. 10000)
> GECKO(8702) | # Payload size left 1176, fragment length 10000, packetization mode SingleNalUnit

To reproduce:
Add the attached testcase patch to m-c and run
> ./mach mochitest dom/media/tests/mochitest/test_peerConnection_videoCodecs.html

Some test failures are expected (video flow check is not implemented), but the crash is not.
Odd.  H264 Mode 0 (pt 97) works fine in https://mozilla.github.io/webrtc-landing/pc_test.html (Require H264, Prefer Mode 0).
Rank: 15
Priority: -- → P1
Assignee: nobody → rjesup
Status: NEW → ASSIGNED
silly webrtc.org code subtracts overhead from one side and not from the other.... how could that go wrong?
Attachment #8907288 - Flags: review?(apehrson)
Attachment #8907215 - Attachment is obsolete: true
Attachment #8907215 - Flags: review?(apehrson)
Comment on attachment 8907288 [details] [diff] [review]
make the fake openh264 encoder support mode 0 h264

Review of attachment 8907288 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks Randell!
Attachment #8907288 - Flags: review?(apehrson) → review+
Rank: 15 → 25
Priority: P1 → P2
Summary: H264 with payload type 97 broken → H264 with payload type 97 broken in mochitests
Blocks: 1395853
Assignee: rjesup → apehrson
Mass change P2->P3 to align with new Mozilla triage process.
Priority: P2 → P3
testing related fix -> fix-optional for 57.
Flags: needinfo?(apehrson)
Thanks. It's fine to let it ride on 58 only.
Flags: needinfo?(apehrson)
Pushed by pehrsons@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/94d38bae703e
make the fake openh264 encoder support mode 0 h264 r=pehrsons
https://hg.mozilla.org/mozilla-central/rev/94d38bae703e
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: