bug 1399137: make the fake openh264 encoder support mode 0 h264 r=pehrsons

MozReview-Commit-ID: LpUQMKkQq16